# ShapeViewer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
sfmlEngine/: CMakeLists.txt  window.cpp  window.h
shapeEngine/: BaseShape.cpp  BaseShape.h  CMakeLists.txt
